@@ -104,4 +104,7 @@ public class AndroidApplicationConfiguration {
 	 * In case this is true {@link com.badlogic.gdx.backends.android.surfaceview.GLSurfaceView20API18} will be used.
 	 * This implementation properly supports attach to and detach from window. default: false */
 	public boolean useGLSurfaceView20API18 = false;
+
+	/** The maximum number of threads to use for network requests. Default is {@link Integer#MAX_VALUE}. */
+	public int maxNetThreads = Integer.MAX_VALUE;
 }
