@@ -108,4 +108,8 @@ public class IOSApplicationConfiguration {
 	/** Edges where app gestures must be fired over system gestures.
 	 * Prior to iOS 11, UIRectEdge.All was default behaviour if status bar hidden, see https://github.com/libgdx/libgdx/issues/5110 **/
 	public UIRectEdge screenEdgesDeferringSystemGestures = UIRectEdge.None;
+
+	/** The maximum number of threads to use for network requests. Default is {@link Integer#MAX_VALUE}. */
+	public int maxNetThreads = Integer.MAX_VALUE;
+
 }
