@@ -1,5 +1,7 @@
 [1.9.10]
 - API Addition: Input allows getting the maximum number of pointers supported by the backend
+- API Change: NetJavaImpl now uses a thread pool to allow concurrent requests
+- API Addition: Configuration option added to allow setting a max number of threads to use for net requests
 
 [1.9.9]
 - API Addition: Add support for stripping whitespace in PixmapPacker
